# cli-weather

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-container.yml
docker/: entrypoint.sh  scheduler-entrypoint.sh
packaging/deb/: control
packaging/rpm/: cli-weather.spec
release-assets/v0.5.0/: cli-weather-0.5.0-1.noarch.rpm  cli-weather_0.5.0_all.deb
release-assets/v0.6.0/: cli-weather-0.6.0-1.noarch.rpm  cli-weather_0.6.0_all.deb
release-assets/v0.7.0/: cli-weather-0.7.0-1.noarch.rpm  cli-weather_0.7.0_all.deb
scripts/: build-deb.sh  build-rpm.sh  init-docker-config.sh
src/cli_weather/: cli.py  config.py  emailer.py  scheduler.py  weather.py
tests/: test_cli_weather.py
