[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-weather"
version = "0.7.0"
description = "CLI weather reports and scheduled email delivery for macOS and Linux."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex" }
]
license = { text = "MIT" }
keywords = ["weather", "cli", "forecast", "email", "linux", "macos"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]

[project.scripts]
cli-weather = "cli_weather.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
